# tele-dis-notifier

./: Cargo.toml  README.md  url_storage.json
src/: discord_bot.rs  main.rs  telegram_bot.rs  url.rs  url_storage.rs
