[package]
name = "tele-dis-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.2"